# ChangeLog for www-apps/phprojekt
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-apps/phprojekt/ChangeLog,v 1.13 2005/05/30 07:13:40 hansmi Exp $

  30 May 2005; Michael Hanselmann <hansmi@gentoo.org>
  phprojekt-4.2.3.ebuild:
  Stable on ppc.

*phprojekt-4.2.3 (29 May 2005)

  29 May 2005; Aaron Walker <ka0ttic@gentoo.org>
  +files/phprojekt-4.2.3-fix-chat-vuln.diff, +phprojekt-4.2.3.ebuild:
  Version bump; added patch to fix chat script insertion vuln for sec bug 89950.

  17 Feb 2005; Robin H. Johnson <robbat2@gentoo.org>
  phprojekt-4.2-r1.ebuild, phprojekt-4.2-r2.ebuild:
  Bug #69831: Ensure unzip is in DEPEND.

  29 Dec 2004; Stuart Herbert <stuart@gentoo.org> :
  Security fix; see bug #75858

  08 Dec 2004; Olivier Crete <tester@gentoo.org> phprojekt-4.2-r1.ebuild:
  Stable on x86 wrt security bug 73021

  08 Dec 2004; <SeJo@gentoo.org> phprojekt-4.2-r1.ebuild:
  stable on ppc gsla: 73021

*phprojekt-4.2-r1 (07 Dec 2004)

  07 Dec 2004; Stuart Herbert <stuart@gentoo.org> +phprojekt-4.2-r1.ebuild:
  Added replacement setup.php; fixes bug #73021

  05 Sep 2004; Sven Wegener <swegener@gentoo.org> :
  Fixed ChangeLog header.

  03 Sep 2004; Pieter Van den Abeele <pvdabeel@gentoo.org>
  phprojekt-4.0-r1.ebuild, phprojekt-4.1.ebuild, phprojekt-4.2.ebuild:
  Masked phprojekt-4.2.ebuild stable for ppc

  03 Sep 2004; Pieter Van den Abeele <pvdabeel@gentoo.org>
  phprojekt-4.0-r1.ebuild, phprojekt-4.1.ebuild:
  Masked phprojekt-4.1.ebuild stable for ppc

  03 Sep 2004; Pieter Van den Abeele <pvdabeel@gentoo.org>
  phprojekt-4.0-r1.ebuild:
  Masked phprojekt-4.0-r1.ebuild stable for ppc

  30 Aug 2004; Renat Lumpau <rl03@gentoo.org> phprojekt-4.2.ebuild:
  Fixed DEPEND/RDEPEND, removed unneeded src_compile

  25 Aug 2004; Renat Lumpau <rl03@gentoo.org> phprojekt-4.2.ebuild:
  Fixed sleep and pkg_compile insanity.

*phprojekt-4.2 (19 Aug 2004)
