@@ -1,2 +1,0 @@
-MD5 6dd8d5a6bfc4b0d73d99c42afb10a6c1 phprojekt-4.2.tar.gz 1011733
-MD5 4d8ca59d86c32650c34e06691b335841 setup.zip 2830
