@@ -1,6 +1,11 @@
 # ChangeLog for www-apps/phprojekt
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-apps/phprojekt/ChangeLog,v 1.13 2005/05/30 07:13:40 hansmi Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-apps/phprojekt/ChangeLog,v 1.14 2005/08/22 21:17:22 rl03 Exp $
+
+  22 Aug 2005; Renat Lumpau <rl03@gentoo.org> -phprojekt-3.2a.ebuild,
+  -phprojekt-4.0-r1.ebuild, -phprojekt-4.1.ebuild, -phprojekt-4.2.ebuild,
+  -phprojekt-4.2-r1.ebuild, -phprojekt-4.2-r2.ebuild:
+  Cleaning old versions
 
   30 May 2005; Michael Hanselmann <hansmi@gentoo.org>
   phprojekt-4.2.3.ebuild:
